# extral

./: .coverage  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  TODOS.md  extral_error_report.json  pyproject.toml  pytest.ini
.github/workflows/: tests.yml  workflow.yml
docs/: Makefile  api.rst  build_docs.sh  conf.py  configuration.rst  getting-started.rst  index.rst
samples/: customers_demo.csv
src/: config.py  database.py  encoder.py  extract.py  load.py  main.py  state.py
src/connectors/: __init__.py  mysql.py  postgresql.py
src/extral/: config.py  context.py  database.py  encoder.py  error_tracking.py  events.py  exceptions.py  extract.py  load.py  main.py  main_old.py  schema.py  state.py  store.py  validation.py
src/extral/connectors/: __init__.py  connector.py  mysql.py  postgresql.py
src/extral/connectors/database/: __init__.py  generic.py  mysql.py  postgresql.py
src/extral/connectors/file/: __init__.py  base.py  csv_connector.py  json_connector.py  utils.py
src/extral/handlers/: __init__.py  console_handler.py  stats_handler.py  tui_handler.py
tests/: __init__.py  conftest.py
tests/integration/: test_database_connectors.py  test_multi_pipeline_configs.py
tests/unit/: test_config.py  test_error_tracking.py  test_exceptions.py  test_validation.py
