[project]
name = "Extral"
dynamic = ["version"]
description = "Python Powered ETL"
authors = [
    {name="Michael Anckaert", email="michael@sinax.be"}
]
maintainers = [
    {name="Michael Anckaert", email="michael@sinax.be"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2>=2.9.10",
    "pymysql>=1.1.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
]
[project.scripts]
extral = "extral.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/extral/__init__.py"

[tool.mypy]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.3",
    "twine>=6.1.0",
    "types-psycopg2>=2.9.21.20250516",
    "types-pymysql>=1.1.0.20250711",
    "types-pyyaml>=6.0.12.20250516",
]
