[project]
name = "Extral"
dynamic = ["version"]
description = "Python Powered ETL"
authors = [
    {name="Michael Anckaert", email="michael@sinax.be"}
]
maintainers = [
    {name="Michael Anckaert", email="michael@sinax.be"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2>=2.9.10",
    "pymysql>=1.1.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
]
[project.scripts]
extral = "extral.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/extral/__init__.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "-q", "--tb=short"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that require external services (databases, files)",
    "database: Tests that require database connections",
    "file: Tests that require file system access",
    "slow: Tests that are slow to run",
    "network: Tests that require network access",
]

[tool.coverage.run]
source = ["src/extral"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.12.3",
    "twine>=6.1.0",
    "types-psycopg2>=2.9.21.20250516",
    "types-pymysql>=1.1.0.20250711",
    "types-pyyaml>=6.0.12.20250516",
]
